--- a/src/main/resources/messages/messages_en_US.properties
+++ b/src/main/resources/messages/messages_en_US.properties
@@ -1,2 +1,6 @@
 error.header.not_found=Header can not be found
 error.line_item.not_found=LineItem can not be found
+error.line_item_in_header.not_found=LineItem can not be found in this header
+error.supplier.not_found=Supplier can not be found
+error.quantity.is_enough=Quantity is enough
+error.time.not_allowed=Time is not allowed
