--- a/src/main/resources/messages/messages_zh_CN.properties
+++ b/src/main/resources/messages/messages_zh_CN.properties
@@ -1,2 +1,6 @@
 error.header.not_found=\u8BE2\u4EF7\u5355\u5934\u4E0D\u5B58\u5728
-error.line_item.not_found=\u8be2\u4ef7\u7269\u6599\u884c\u4e0d\u5b58\u5728
+error.line_item.not_found=\u8BE2\u4EF7\u7269\u6599\u884C\u4E0D\u5B58\u5728
+error.line_item_in_header.not_found=\u8BE5\u8BE2\u4EF7\u5355\u4E0B\u672A\u627E\u5230\u7269\u6599\u884C\u4FE1\u606F
+error.supplier.not_found=\u4F9B\u5E94\u5546\u4E0D\u5B58\u5728
+error.quantity.is_enough=\u6570\u91CF\u8FC7\u591A
+error.time.not_allowed=\u65E5\u671F\u4E0D\u5408\u6CD5
