--- a/src/main/resources/messages/messages_en_US.properties
+++ b/src/main/resources/messages/messages_en_US.properties
@@ -4,3 +4,8 @@ error.line_item_in_header.not_found=LineItem can not be found in this header
 error.supplier.not_found=Supplier can not be found
 error.quantity.is_enough=Quantity is enough
 error.time.not_allowed=Time is not allowed
+error.supplier.participated_or_abandoned=Supplier is participated or abandoned
+error.quotation_line.not_found=Quotation is not found 
+error.item_sup_assign.not_found=ItemAssign is not found
+error.item_sup_assign.existed=ItemAssign is existed
+error.price.not_allowed=price is not allowed
