--- a/src/main/resources/messages/messages_zh_CN.properties
+++ b/src/main/resources/messages/messages_zh_CN.properties
@@ -4,3 +4,8 @@ error.line_item_in_header.not_found=\u8BE5\u8BE2\u4EF7\u5355\u4E0B\u672A\u627E\u
 error.supplier.not_found=\u4F9B\u5E94\u5546\u4E0D\u5B58\u5728
 error.quantity.is_enough=\u6570\u91CF\u8FC7\u591A
 error.time.not_allowed=\u65E5\u671F\u4E0D\u5408\u6CD5
+error.supplier.participated_or_abandoned=\u8BE5\u4F9B\u5E94\u5546\u5DF2\u53C2\u4E0E\u6216\u5DF2\u653E\u5F03
+error.quotation_line.not_found=\u62A5\u4EF7\u5355\u4E0D\u5B58\u5728
+error.item_sup_assign.not_found=\u5206\u914D\u6570\u636E\u4E0D\u5B58\u5728
+error.item_sup_assign.existed=\u5206\u914D\u6570\u636E\u5DF2\u5B58\u5728
+error.price.not_allowed=\u4EF7\u683C\u8303\u56F4\u4E0D\u5141\u8BB8
